--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
          Active Class -->
     <div class="mega-menu" id="mymenu">
       <ul>
-        <li><a href="./bsis.web.html" class="popup1">Home</a></li>
+        <li><a href="./index.html" class="popup1">Home</a></li>
         <li><a href="./blogpage.html" class="popup2">Blogs</a></li>
         <li><a href="./contactpage.html" class="popup3">Contacts</a></li>
         <li><a href="./aboutus.html" class="active4">About</a></li>
