--- a/blogpage.html
+++ b/blogpage.html
@@ -18,7 +18,7 @@
 			<!-- 1st subdiv -->
 			<div class="mega-menu" id="mymenu">
 				<ul>
-					<li><a href="./bsis.web.html" class="popup1">Home</a></li>
+					<li><a href="./index.html" class="popup1">Home</a></li>
 					<li><a href="./blogpage.html" class="active2">Blogs</a></li>
 					<li><a href="./contactpage.html" class="popup3">Contacts</a></li>
 					<li><a href="./aboutus.html" class="popup4">About</a></li>
